--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
         <activity android:name=".weather.WorldWeather"/>
 
-        <receiver android:name=".weather.weather_widget">
+        <receiver android:name=".weather.WeatherWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -33,7 +33,7 @@
                 android:resource="@xml/weather_widget_info" />
         </receiver>
 
-        <activity android:name=".weather.weather_widgetConfigureActivity">
+        <activity android:name=".weather.WeatherWidgetConfigureActivity">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
